Minimum size before hiding smartphone picture corrected
In the previous version, screen width could get small enough for the login menu to slightly overlap the smartphone picture

--- a/style.css
+++ b/style.css
@@ -166,7 +166,6 @@ a {
 
 #everything {
     max-width: 850px;
-    min-width: 700px;
 }
 
 #smartphone-pics {
@@ -179,7 +178,7 @@ a {
     left: 120px;
 }
 
-@media (max-width: 699px) {
+@media (max-width: 750px) {
     #smartphone-pics {
         display: none;
     }
